kubernetes/apps/networking/static-routes/app/brewpiless/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app brewpiless
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80

  externalName: 10.8.10.212
