kubernetes/apps/networking/static-routes/app/brewpiless/ingress.yaml
---


# yaml-language-server: $schema=https://kubernetes-schemas.trux.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewpiless
  namespace: network-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    hajimari.io/enable: "true"
    hajimari.io/icon: "glass-mug-variant"
    hajimari.io/appName: "brewpi"

spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - "brewpi.${EXTERNAL_DOMAIN}"

  rules:
    - host: brewpi.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brewpiless
                port:
                  number: 80
